--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>Smart Citizen Kit ID</h2>
         <label for="kitId">ID number</label>
         <input type="text" id="kitIdInput" name="kitId">
-        <input type="button" value="Ok" id="kitIdButton" onclick="initDashboard()"> 
+        <input type="button" value="Ok" id="kitIdButton" onclick="newKitId()"> 
         <p class="hint" id="kitIdHint"></p>
       </section>
       <section id="kitData">
