--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1 id="kitDataTitle"></h1>
         <h2 id="kitDataDescription"></h2>
       </section>
-      <section id="sensorsData"></section>
+      <section id="sensorsData" class="grid"></section>
     </main>
   </body>
   <script src="dist/uPlot.iife.min.js"></script>
