--- a/index_old.html
+++ b/index_old.html
@@ -9,7 +9,18 @@
   <body>
     <main class="main">
       <h1>Smart Citizen Dashboard</h1>
-      <div class="alert" id="alert"></div>
+      <section>
+        <h2>Smart Citizen Kit ID</h2>
+        <label for="kitId">ID number</label>
+        <input type="text" id="kitIdInput" name="kitId">
+        <input type="button" value="Ok" id="kitIdButton" onclick="newKitId()"> 
+        <p class="hint" id="kitIdHint"></p>
+      </section>
+      <section id="kitData">
+        <h1 id="kitDataTitle"></h1>
+        <h2 id="kitDataDescription"></h2>
+      </section>
+      <section id="sensorsData" class="grid"></section>
     </main>
   </body>
   <script src="dist/uPlot.iife.min.js"></script>
