--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <main class="main">
+    <main class="main" id="main">
       <h1>Smart Citizen Dashboard</h1>
       <div class="alert" id="alert"></div>
     </main>
