--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <div class="reset" id="reset">reset</div>
+    <div class="loading" id="loading">loading ...</div>
     <main class="main" id="main">
     </main>
     <div class="alert" id="alert"></div>
