--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </main>
     <div class="alert" id="alert"></div>
   </body>
+  <script src="dist/list.min.js"></script>
   <script src="dist/uPlot.iife.min.js"></script>
   <script src="script.js"></script>
 </html>
