--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   </body>
   <script src="dist/list.min.js"></script>
   <script src="dist/uPlot.iife.min.js"></script>
+  <script src="settings.js"></script>
   <script src="script.js"></script>
 </html>
