--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <div class="reset button" id="reset">reset</div>
     <div class="loading" id="loading">loading...</div>
     <main class="main" id="main">
     </main>
