--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width; initial-scale=1; shrink-to-fit=no;"/>
     <title>Dashboard</title>
-    <link rel="stylesheet" href="https://unpkg.com/uplot@1.6.4/dist/uPlot.min.css">
+    <link rel="stylesheet" href="https://leeoniya.github.io/uPlot/dist/uPlot.min.css">
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
@@ -14,7 +14,7 @@
     <div class="alert" id="alert"></div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
-  <script src="https://unpkg.com/uplot@1.6.12/dist/uPlot.iife.min.js"></script>
+  <script src="https://leeoniya.github.io/uPlot/dist/uPlot.iife.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.js'></script>
   <script src="settings.js"></script>
   <script src="script.js"></script>
