--- a/index-old.html
+++ b/index-old.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <main class="main" id="main"></main>
+    <div class="reset button" id="reset">reset</div>
+    <div class="loading" id="loading">loading...</div>
+    <main class="main" id="main">
+    </main>
+    <div class="alert" id="alert"></div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
   <script src="https://leeoniya.github.io/uPlot/dist/uPlot.iife.js"></script>
