--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width; initial-scale=1; shrink-to-fit=no;"/>
-    <title>Dashboard</title>
+    <title>Smart Citizen Dashboard</title>
     <link rel="stylesheet" href="https://leeoniya.github.io/uPlot/dist/uPlot.min.css">
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <main class="main" id="main"></main>
+    <div class="loading" id="loading">loading...</div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
   <script src="https://leeoniya.github.io/uPlot/dist/uPlot.iife.js"></script>
