uplot responsive + loading animation + colors sc

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main class="main" id="main"></main>
-    <div class="loading" id="loading">loading...</div>
+    <div class="loading" id="loading">loading<span>.</span><span>.</span><span>.</span></div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
   <script src="https://leeoniya.github.io/uPlot/dist/uPlot.iife.js"></script>
