--- a/index.html
+++ b/index.html
@@ -1,18 +1,63 @@
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width; initial-scale=1; shrink-to-fit=no;"/>
-    <title>Smart Citizen Dashboard</title>
-    <link rel="stylesheet" href="https://leeoniya.github.io/uPlot/dist/uPlot.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
-  <body>
-    <main class="main" id="main"></main>
-    <div class="loading" id="loading">loading<span>.</span><span>.</span><span>.</span></div>
-  </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
-  <script src="https://leeoniya.github.io/uPlot/dist/uPlot.iife.js"></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.js'></script>
-  <script src="settings.js"></script>
-  <script src="script.js"></script>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width; initial-scale=1; shrink-to-fit=no;"/>
+  <title>Smart Citizen Dashboard</title>
+  <link rel="stylesheet" href="https://leeoniya.github.io/uPlot/dist/uPlot.min.css">
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="style-custom.css" /> -->
+</head>
+<body>
+  <main class="main" id="main"></main>
+  <div class="loading" id="loading">loading<span>.</span><span>.</span><span>.</span></div>
+  
+  <!-- <footer id="footer">
+    <section class="footer__info">
+      <img id="footer_logo" src="assets/comida.png" alt="Jardín de las Mariposas">
+      <p><a href="https://iaac.net/project/co-mida" target="_blank">COmida</a> es un sistema de pared verde inteligente co-diseñado con los ciudadanos para cultivar plantas comestibles y producir energía gracias a las bacterias.</p>
+    </section>
+    <section class="footer__partners">
+      <section>
+        <h2>Con el apoyo de:</h2>
+        <ul class="footer_links">
+          <li><img src="assets/bithabitat.png" alt="bithabitat"></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Un proyecto de:</h2>
+        <ul class="footer_links">
+          <li><img src="assets/aag.png" alt="Advanced Architecture Group" class="logo-landscape"></li>
+          <li><img src="assets/taulaeix.png" alt="Taula Eix Pere IV"></li>
+          <li><img src="assets/connecthort.png" alt="Connect Hort"></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Con la colaboración de:</h2>
+        <ul class="footer_links">
+          <li><img src="assets/cumella.png" alt="Cerámica Cumella" class="logo-landscape"></li>
+          <li><img src="assets/wasp.png" alt="Wasp" class="logo-landscape"></li>
+          <li><img src="assets/sio.png" alt="Sio-2"></li>
+          <li><img src="assets/smartcitizen.png" alt="Smart Citizen"></li>
+        </ul>
+      </section>
+    </section>
+    <section class="footer__socials">
+      <h2>¡Síguenos!</h2>
+      <ul class="footer_links">
+        <li><a href="https://iaac.net/project/co-mida/" target="_blank"><img src="assets/www.png" alt="WWW" class="logo-social"></a></li>
+        <li><a href="https://twitter.com/comidaproject" target="_blank"><img src="assets/twitter.png" alt="Twitter" class="logo-social"></a></li>
+        <li><a href="https://www.instagram.com/comida.project/" target="_blank"><img src="assets/instagram.png" alt="Instagram" class="logo-social"></a></li>
+        <li><a href="https://www.facebook.com/comida.ciutatproactiva" target="_blank"><img src="assets/facebook.png" alt="Facebook" class="logo-social"></a></li>
+      </ul>
+    </section>
+  </footer> -->
+  
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
+<script src="https://leeoniya.github.io/uPlot/dist/uPlot.iife.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.js'></script>
+<script src="settings.js"></script>
+<script src="script.js"></script>
+<script src="settings-custom.js"></script>
+<script src="script-custom.js"></script>
 </html>
