Add calendar datepicker and cleanup console messages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta name="viewport" content="width=device-width; initial-scale=1; shrink-to-fit=no;"/>
   <title>Smart Citizen Dashboard</title>
   <link rel="stylesheet" href="https://leeoniya.github.io/uPlot/dist/uPlot.min.css">
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" href="assets/datepicker/css/datepicker.minimal.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="shortcut icon" href="assets/favicon.ico">
 </head>
 <body>
@@ -15,6 +16,7 @@
 <script src="https://leeoniya.github.io/uPlot/dist/uPlot.iife.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.10.2/Sortable.min.js"></script>
+<script src="assets/datepicker/datepicker.js"></script>
 <script src="settings.js"></script>
 <script src="script.js"></script>
 </html>
